# mvp-MDH

./: .gitignore  .pre-commit-config.yaml  Caddyfile  How-to-Setup.md  MDH_Introduction.md  MDH_for_Supply_Chain_DOC.md  Makefile  README.md  Supply_Chain_Integration_Guide.md  compose.yaml  mdh-beat.service  mdh-worker.service  mdh.service
web/: .dockerignore  Dockerfile  manage.py  pip.conf  pyproject.toml
web/contrib/: aws.py  file_reader.py
web/contrib/expense/: bvd.py
web/contrib/extraction/: oai.py
web/customer/: forms.py  urls.py  views.py
web/dispatch/: admin.py  apps.py  urls.py  utils.py
web/dispatch/forms/: __init__.py  assignment.py  dispatch.py  order.py  trip.py  upload.py
web/dispatch/migrations/: 0001_initial.py  0002_initial.py
web/dispatch/models/: __init__.py  dispatch.py  drivertruckassignment.py  log.py  notification.py  order.py  sequence.py  status_history.py  trip.py  uploadfile.py
web/dispatch/tables/: __init__.py  assignment.py  dispatch.py  order.py  trip.py
web/dispatch/views/: __init__.py  api.py  assignment.py  dispatch.py  invoice.py  order.py  trip.py
web/expense/: IMPROVEMENTS_SUMMARY.md  STATUS_SYNCHRONIZATION_FIXES.md  STATUS_WORKFLOW.md  admin.py  models.py  tables.py  tasks.py  urls.py  utils.py
web/expense/forms/: __init__.py  bvd.py  other.py  payout.py
web/expense/management/: __init__.py
web/expense/migrations/: 0001_initial.py
web/expense/templatetags/: __init__.py  math_filters.py
web/expense/tests/: test_payout.py
web/expense/views/: payout.py
web/fleet/: admin.py  apps.py  signals.py  urls.py  utils.py
web/fleet/examples/: carriers.py  fleet_examples.py
web/fleet/forms/: carrier.py  driver.py  (+2 more)
web/mdh/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/models/: admin.py  models.py
web/subscriptions/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tables.py  urls.py  views.py
web/templatetags/: json_filters.py
web/tenant/: admin.py  apps.py  forms.py  middleware.py  models.py  tables.py  tasks.py  urls.py
(+140 files in other folders)
